--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "memory-cache": "^0.2.0",
     "node-fetch": "^3.3.2",
     "ws": "^8.16.0"
   },
